[gd_scene load_steps=21 format=3 uid="uid://bfsgckpckosf"]

[ext_resource type="Script" uid="uid://cyhaw1qyjtrhn" path="res://scripts/characters/character_controller.gd" id="1_rp718"]
[ext_resource type="Texture2D" uid="uid://iy021d8gnrks" path="res://assets/img/crosshairs.png" id="3_qgnko"]
[ext_resource type="Texture2D" uid="uid://bxqd1qybg36cl" path="res://assets/img/circle.png" id="4_7vyk4"]
[ext_resource type="Script" uid="uid://bl2gqgh8sr6i1" path="res://scripts/state_machine/state_machine.gd" id="4_atpat"]
[ext_resource type="Script" uid="uid://c52uolq84yha2" path="res://scripts/state_machine/state_machine_player.gd" id="5_6eyoc"]
[ext_resource type="Script" uid="uid://d3mhvrwvo3puh" path="res://scripts/state_machine/states/idle_state.gd" id="5_kqtwu"]
[ext_resource type="Script" uid="uid://vf06635gk4q0" path="res://scripts/state_machine/states/move_state.gd" id="6_kqtwu"]
[ext_resource type="Script" uid="uid://b2n4040tr8qe6" path="res://scripts/state_machine/states/dash_state.gd" id="7_3wg1y"]
[ext_resource type="Script" uid="uid://c83fdq88jwyeg" path="res://scripts/weapons/ranged_weapon_base.gd" id="7_k4v7y"]
[ext_resource type="Script" uid="uid://c30av3xht06qh" path="res://scripts/characters/debug_label.gd" id="8_eojnx"]
[ext_resource type="PackedScene" uid="uid://dns54yr7n7ixb" path="res://scenes/weapons/projectiles/projectile.tscn" id="8_xrqxk"]
[ext_resource type="Script" uid="uid://c2hg8y2fqffme" path="res://scripts/weapons/ranged_weapon.gd" id="9_g66nw"]
[ext_resource type="Texture2D" uid="uid://yfinwvdrgjhy" path="res://assets/img/red-arrow.png" id="9_qgnko"]
[ext_resource type="PackedScene" uid="uid://dik1803o7impn" path="res://scenes/weapons/projectiles/projectile_missle.tscn" id="10_xrqxk"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="11_2l4js"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wocps"]

[sub_resource type="Gradient" id="Gradient_rp718"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yewv4"]
gradient = SubResource("Gradient_rp718")

[sub_resource type="Resource" id="Resource_eir2k"]
script = ExtResource("9_g66nw")
fire_rate = 0.25
projectile = ExtResource("8_xrqxk")
ammo = 0
max_ammo = 0
unlimited_ammo = true
metadata/_custom_type_script = "uid://c2hg8y2fqffme"

[sub_resource type="Resource" id="Resource_wqk1x"]
script = ExtResource("9_g66nw")
fire_rate = 1.0
projectile = ExtResource("10_xrqxk")
ammo = 0
max_ammo = 0
unlimited_ammo = true
metadata/_custom_type_script = "uid://c2hg8y2fqffme"

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("weapon_primary", "weapon_secondary", "aim_sprite", "touch_sprite")]
collision_mask = 4
motion_mode = 1
script = ExtResource("1_rp718")
movement_type = 2
aim_type = 1
facing_type = 1
attack_type = 1
allow_y_controls = true
gravity_percent = 0.0
weapon_primary = NodePath("WeaponPrimary")
weapon_secondary = NodePath("WeaponSecondary")
aim_sprite = NodePath("Crosshairs")
touch_sprite = NodePath("TouchCircle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wocps")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, 0)
scale = Vector2(0.078125, 20)
texture = SubResource("GradientTexture1D_yewv4")

[node name="StateMachinePlayer" type="Node" parent="." node_paths=PackedStringArray("parent_node", "state_machine")]
script = ExtResource("5_6eyoc")
parent_node = NodePath("..")
state_machine = NodePath("../StateMachine")
is_active = true
metadata/_custom_type_script = "uid://c52uolq84yha2"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_atpat")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bl2gqgh8sr6i1"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("5_kqtwu")
metadata/_custom_type_script = "uid://d3mhvrwvo3puh"

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("6_kqtwu")
metadata/_custom_type_script = "uid://vf06635gk4q0"

[node name="DashState" type="Node" parent="StateMachine"]
script = ExtResource("7_3wg1y")
dash_time = 0.1
metadata/_custom_type_script = "uid://b2n4040tr8qe6"

[node name="WeaponPrimary" type="Node2D" parent="."]
position = Vector2(11, 0)
script = ExtResource("7_k4v7y")
ranged_weapon = SubResource("Resource_eir2k")
metadata/_custom_type_script = "uid://c83fdq88jwyeg"

[node name="WeaponSecondary" type="Node2D" parent="."]
position = Vector2(11, 0)
script = ExtResource("7_k4v7y")
ranged_weapon = SubResource("Resource_wqk1x")
metadata/_custom_type_script = "uid://c83fdq88jwyeg"

[node name="DebugLabel" type="Label" parent="."]
offset_left = -10.0
offset_top = -42.0
offset_right = 30.0
offset_bottom = -10.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 16
text = "State
Position"
script = ExtResource("8_eojnx")

[node name="DirectionArrow" type="TextureRect" parent="."]
offset_left = 23.0
offset_top = -9.0
offset_right = 39.0
offset_bottom = 7.0
texture = ExtResource("9_qgnko")

[node name="Crosshairs" type="Sprite2D" parent="."]
position = Vector2(61, 0)
texture = ExtResource("3_qgnko")

[node name="TouchCircle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_7vyk4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 4
layer = 30
visible = false

[node name="Move Virtual Joystick" parent="CanvasLayer" instance=ExtResource("11_2l4js")]
offset_left = 25.0
offset_top = -70.0
offset_right = 123.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Aim Virtual Joystick" parent="CanvasLayer" instance=ExtResource("11_2l4js")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = -71.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
clampzone_size = 25.0
action_left = "aim_left"
action_right = "aim_right"
action_up = "aim_up"
action_down = "aim_down"
